update swagger docs in auth controller
