# docs/swagger.json
@@ -231,12 +231,12 @@
                 "summary": "Login",
                 "parameters": [
                     {
-                        "description": "User object",
-                        "name": "user",
+                        "description": "Login object",
+                        "name": "login",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.User"
+                            "$ref": "#/definitions/models.UserLogin"
                         }
                     }
                 ],
@@ -607,6 +607,17 @@
                     "type": "string"
                 },
                 "updated_at": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.UserLogin": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
                     "type": "string"
                 }
             }
